# coordination-kit

./: .gitignore  README.md
bridge/: README.md  requirements.txt  serial_bridge.py
firmware/: .gitignore  CMakeLists.txt  Cargo.toml  DFR1154_ESP32-S3_AI_Camera_Component_Reference.md  README.md  build.rs  partitions.csv  rust-toolchain.toml  sdkconfig.defaults  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
firmware-rust/: README.md  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/bootloader_components/boot_hooks/: CMakeLists.txt  boot_hooks.c
firmware/esp32c6/: Cargo.toml
firmware/esp32c6/src/: main.rs
firmware/esp32s3/: Cargo.toml
firmware/esp32s3/src/: main.rs
firmware/main/: CMakeLists.txt  Kconfig.projbuild  blink.c  blink_c6.c  camera_pin.h  esp_now_bridge.c  idf_component.yml  main_c6.c  main_s3.c  sd_card.c  sd_card.h  speaker.c  speaker.h  usb_webcam.c  usb_webcam_main.c
poc/: README.md  button_reader.py  foot_switch.py  requirements.txt  ui.py
