[package]
edition      = "2024"
name         = "coordination-firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "blink-c6"
path = "./src/bin/blink_c6.rs"

[[bin]]
name = "blink-s3"
path = "./src/bin/blink_s3.rs"

[features]
esp32c6 = ["esp-hal/esp32c6", "esp-bootloader-esp-idf/esp32c6"]
esp32s3 = ["esp-hal/esp32s3", "esp-bootloader-esp-idf/esp32s3"]

[dependencies]
critical-section = "1.2.0"
esp-bootloader-esp-idf = { version = "0.4.0" }
esp-hal = { version = "~1.0.0", features = ["unstable"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
