[package]
name = "coord-c6"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.22", features = ["esp32c6"] }
esp-backtrace = { version = "0.15", features = ["esp32c6", "exception-handler", "panic-handler"] }
esp-println = { version = "0.12", features = ["esp32c6"] }

[profile.release]
opt-level = "s"
